# CrashServer

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  babel.cfg  main-rq.py  main.py  pyproject.toml  requirements.txt
.docker/: .env.docker  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  init.py  wsgi.py
.github/workflows/: ci.yml  docker.yml  ghcr.yml  lint.yml
config/: settings.toml
crashserver/: cli.py  config.py  syscheck.py  tasks.py
crashserver/migrations/: alembic.ini  env.py
crashserver/migrations/versions/: 20211211_001700_initial_database.py  20211211_002700.py  20211211_002700_add_upload_ip.py  20220114_103500_add_storage_table.py  20220114_103500_storage_table.py  20230108_054000_symcache_remove.py
crashserver/server/: __init__.py  forms.py  jobs.py
crashserver/server/controllers/: auth.py  crash_upload_api.py  sym_upload_v1.py  sym_upload_v2.py  webapi.py  webviews.py
crashserver/server/core/: extensions.py
crashserver/server/helpers/: __init__.py  crash_upload.py
crashserver/server/models/: __init__.py  annotation.py  attachments.py  build_metadata.py  minidump.py  project.py  storage.py  symbol.py  symbol_upload.py  symcache.py  user.py
crashserver/server/storage/: __init__.py  backend.py  loader.py  storage_factory.py  storage_target.py
crashserver/server/storage/modules/: __init__.py  filesystem.py  s3.py  s3generic.py
crashserver/tasks/: __init__.py
crashserver/utility/: decorators.py  hostinfo.py  humanbytes.py  misc.py  processor.py  sysinfo.py
crashserver/webapp/: __init__.py  api.py  auth.py  extensions.py  forms.py  jobs.py  operations.py  views.py
crashserver/webapp/controllers/: __init__.py  crash_upload_api.py  sym_upload_v1.py  sym_upload_v2.py  webapi.py  webviews.py
crashserver/webapp/core/: auth.py
crashserver/webapp/helpers/: crash_upload.py
crashserver/webapp/models/: __init__.py  annotation.py  attachments.py  build_metadata.py  minidump.py  minidump_task.py  project.py  symbol.py  symbol_upload.py  symcache.py  user.py
crashserver/webapp/symupload/: sym_upload_v1.py  sym_upload_v2.py
res/: Config.toml
res/static/css/: app.css  prism.css
res/static/js/: app.js  prism.js
res/templates/: base.html  crash.html  crash_detail.html  home.html  navbar.html  symbols.html  upload.html
res/templates/app/: create.html  dashboard.html  home.html  settings.html  settings.macros.html  upload.html
res/templates/auth/: login.html  user_settings.html
res/templates/base/: base.html  flash.html  navbar.html  sidebar.html
res/templates/crash/: crash.html  crash_detail.html
res/templates/errors/: 404.html  500.html
res/templates/symbols/: symbol-list-no-syms.html  symbol-list-simple.html  symbol-list-versioned.html  symbol-list.html  symbol-upload.html  symbols.html
src/: main.py
src/tasks/: __init__.py
src/utility/: __init__.py  decorators.py  humanbytes.py  processor.py  sysinfo.py
src/webapp/: __init__.py  api.py  auth.py  models.py  operations.py  sym_upload_v1.py  views.py
src/webapp/forms/: __init__.py
src/webapp/models/: Annotation.py  BuildMetadata.py  Symbol.py  User.py  __init__.py  build_metadata.py  minidump.py  project.py  symbol_upload.py
src/webapp/symupload/: __init__.py  sym_upload_v1.py  sym_upload_v2.py
static/: app.css
templates/: base.html  home.html  upload.html
tests/: conftest.py  util.py
tests/functional/: test_auth.py  test_storage.py  test_webviews.py
