[tool.poetry]
name = "crashserver"
version = "0.2.0"
authors = ["James <jameskr97@gmail.com>"]
description = "A Google Crashpad server, made for open source projects"

homepage = "https://github.com/jameskr97/CrashServer"
repository = "https://github.com/jameskr97/CrashServer"

readme = "README.md"
include = ["res", "config"]

[tool.poetry.dependencies]
python = "^3.7"

Flask = "^2.0.1"
Flask_Login = "^0.5.0"
Flask_SQLAlchemy = "^2.5.1"
Flask_WTF = "^0.15.1"
SQLAlchemy = "^1.4.22"
SQLAlchemy_Utils = "^0.37.8"
WTForms = "^2.3.3"
Werkzeug = "^2.0.1"
dynaconf = "^3.1.5"
email-validator = "^1.1.3"
gevent = "^21.8.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
python-magic = "^0.4.24"
toml = "^0.10.2"
Flask-Limiter = "^1.4"
requests = "^2.26.0"
click = "^8.0.1"
cloup = "^0.11.0"
loguru = "^0.5.3"
natsort = "^7.1.1"
rq = "^1.10.0"
humanize = "^3.11.0"
Flask-DebugToolbar = "^0.11.0"
Flask-Migrate = "^3.1.0"
boto3 = "^1.20.24"

[tool.poetry.dev-dependencies]
[tool.poetry.scripts]
crashserver = "crashserver.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
